--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ django-extensions>=3.2.0
 django-debug-toolbar>=4.2.0
 phonenumber_field>=7.1.0
 python-dotenv>=1.0.0
+django-filter>=23.0
+djoser>=2.2.0
+djangorestframework-simplejwt>=5.3.0
+mysqlclient>=2.2.0
