--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ django-filter>=23.0
 djoser>=2.2.0
 djangorestframework-simplejwt>=5.3.0
 mysqlclient>=2.2.0
+django-cors-headers>=4.0.0
+celery>=5.3.0
+redis>=4.5.0
+Pillow>=9.0.0
+drf-nested-routers>=0.93.4
